[gd_scene load_steps=2 format=3 uid="uid://cmia0lymgwd3x"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_g7eog"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_g7eog")

[node name="Background" type="Sprite2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1281.0
offset_bottom = 719.0
color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 553.0
offset_top = 466.0
offset_right = 810.0
offset_bottom = 567.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="HowToPlay" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "How to play"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
